fixed map location on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -322,7 +322,11 @@ $content-width: 75%;
         grid-column-start: 1;
     }
 
-    .dp-box {
+    .dp-box, #address-box {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .maps {
+        margin-top: 30px;
     }
 }
